# ev-digital-twin

./: .gitignore  project_status.md  pyproject.toml  requirements.txt
analysis/: distributions.py
ingestion/: config.py  run_scraper.py  scraper.py  storage.py
notebooks/: 01_eda.ipynb  verifications.ipynb
reference/notes/: Notes.txt  paper1.md  paper2.md  paper3.md  paper4.md  paper5.md  project_description.md
reference/university_materials/: Ethical_Approval.md  data_management.md  interim_report_marking_scheme.md
reports/: interim_report.md
